--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <title>React App</title>
   </head>
   <body>
-    <script crossorigin src=""></script>
+    <noscript></noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
